--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Counter UI</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div class="container">
@@ -21,6 +21,6 @@
         <button id="colorBtn">🎨</button>
     </div>
 
-    <script src="script.js"></script>
+    <script src="style.js"></script>
 </body>
 </html>
