--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
         <button id="colorBtn">🎨</button>
     </div>
 
-    <script src="style.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
